--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Purpose and Education
-								</h1>
-							<p class="major"><!--[-->By Michelle Song </a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.<!--]--></p>
+							</h1>
+							<p class="major"><!--[-->By Michelle Song</a> <!--]--></p>
+							<p> Looking at Education through different perspectives </p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -34,11 +35,12 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>Medium</h2>
+							<p>Take a look on some posts I was able to write about Education. </p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Learn More</a></li> <a href="https://medium.com/@mmsong97"></a>
 							</ul>
+							<a href="https://medium.com/@mmsong97"></a>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
@@ -48,7 +50,7 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
+							<h2>Soundcloud</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
