linked button to medium

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
 							<h2>Medium</h2>
 							<p>Take a look on some posts I was able to write about Education. </p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li> <a href="https://medium.com/@mmsong97"></a>
+								<li><a href="https://medium.com/@mmsong97" target="_blank" class="button">Learn More</a></li>
 							</ul>
-							<a href="https://medium.com/@mmsong97"></a>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
