--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Medium</h2>
-							<p>Take a look on some posts I was able to write about Education. </p>
+							<h2>Medium Posts: Read about Purpose and Education</h2>
+							<p>A deeper look into Education. </p>
 							<ul class="actions vertical">
 								<li><a href="https://medium.com/@mmsong97" target="_blank" class="button">Learn More</a></li>
 							</ul>
@@ -50,7 +50,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Soundcloud</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<p>Some friends and I created a podcast to give insight in our own personal thoughts on education.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
