Links for Medium post

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 							<h1>Purpose and Education
 							</h1>
 							<p class="major"><!--[-->By Michelle Song</a> <!--]--></p>
-							<p> Looking at Education through different perspectives </p>
+							<p> Looking at Education through different perspectives. Take a look at different lenses of education through a series of blog posts, a podcase and video. This wesbite was created for the Writing and Digital Media class.
+							 </p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -36,10 +37,14 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Medium Posts: Read about Purpose and Education</h2>
-							<p>A deeper look into Education. </p>
+							<p>A deeper look into Education. In these posts, read about purpose, learning, understanding and what you can do from here on out. Click on each blog post title to read through these posts or click on Learn More to access my Medium website. </p>
+							<ul>
 							<ul class="actions vertical">
 								<li><a href="https://medium.com/@mmsong97" target="_blank" class="button">Learn More</a></li>
-							</ul>
+							<ul> <li><a href="https://medium.com/@mmsong97/education-and-purpose-do-you-have-it-42693683eaa7"</a> Education and Purpose - Do you have it? </li>
+								<li><a href="https://medium.com/@mmsong97/to-keep-learning-and-to-speak-with-silence-7afa42e2f338" </a> To Keep Learning and To Speak with Silence </li>
+								<li><a href="https://medium.com/@mmsong97/looking-from-a-different-perspective-65a36587fc43" </a> Looking From a Different Perspective </li>
+								<li><a href="https://medium.com/@mmsong97/you-are-able-4ea0fcc5590" You Are Able </li> </ul>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
@@ -50,7 +55,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Soundcloud</h2>
-							<p>Some friends and I created a podcast to give insight in our own personal thoughts on education.</p>
+							<p>Some friends and I created a podcast to give insight in our own personal thoughts on education. Click on the Learn More button to access the podcast.</p>
 							<ul class="actions vertical">
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
