Fixing some links

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 							<ul> <li><a href="https://medium.com/@mmsong97/education-and-purpose-do-you-have-it-42693683eaa7"</a> Education and Purpose - Do you have it? </li>
 								<li><a href="https://medium.com/@mmsong97/to-keep-learning-and-to-speak-with-silence-7afa42e2f338" </a> To Keep Learning and To Speak with Silence </li>
 								<li><a href="https://medium.com/@mmsong97/looking-from-a-different-perspective-65a36587fc43" </a> Looking From a Different Perspective </li>
-								<li><a href="https://medium.com/@mmsong97/you-are-able-4ea0fcc5590" You Are Able </li> </ul>
+								<li><a href="https://medium.com/@mmsong97/you-are-able-4ea0fcc5590" </a> You Are Able </li>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
@@ -54,10 +54,10 @@
 				<!-- Three -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Soundcloud</h2>
-							<p>Some friends and I created a podcast to give insight in our own personal thoughts on education. Click on the Learn More button to access the podcast.</p>
+							<h2>Education Podcast</h2>
+							<p>Some friends and I created a podcast to give insight on our own personal thoughts on education. Click on the Learn More button to access the podcast through SoundCloud.</p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://soundcloud.com/user-122066732-684770413/education-podcast" target="_blank" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -68,10 +68,10 @@
 				<!-- Four -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>What is Education to You: A Video </h2>
+							<p>We had the chance to interview some students around the Virginia Tech campus and here is a video compiling different meanings to education. Click on the Learn More button to be directed to YouTube video. </p>
 							<ul class="actions vertical">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.youtube.com/watch?v=NtnxLKHC0Kk" target="_blank" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
