--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 							<h2>Medium Posts: Read about Purpose and Education</h2>
 							<p>A deeper look into Education. In these posts, read about purpose, learning, understanding and what you can do from here on out. Click on each blog post title to read through these posts or click on Learn More to access my Medium website. </p>
 							<ul>
+								  <li><a href="https://medium.com/@mmsong97/education-and-purpose-do-you-have-it-42693683eaa7"</a> Education and Purpose - Do you have it? </li>
+									<li><a href="https://medium.com/@mmsong97/to-keep-learning-and-to-speak-with-silence-7afa42e2f338" </a> To Keep Learning and To Speak with Silence </li>
+									<li><a href="https://medium.com/@mmsong97/looking-from-a-different-perspective-65a36587fc43" </a> Looking From a Different Perspective </li>
+									<li><a href="https://medium.com/@mmsong97/you-are-able-4ea0fcc5590" </a> You Are Able </li>
+									</ul>
 							<ul class="actions vertical">
 								<li><a href="https://medium.com/@mmsong97" target="_blank" class="button">Learn More</a></li>
-							<ul> <li><a href="https://medium.com/@mmsong97/education-and-purpose-do-you-have-it-42693683eaa7"</a> Education and Purpose - Do you have it? </li>
-								<li><a href="https://medium.com/@mmsong97/to-keep-learning-and-to-speak-with-silence-7afa42e2f338" </a> To Keep Learning and To Speak with Silence </li>
-								<li><a href="https://medium.com/@mmsong97/looking-from-a-different-perspective-65a36587fc43" </a> Looking From a Different Perspective </li>
-								<li><a href="https://medium.com/@mmsong97/you-are-able-4ea0fcc5590" </a> You Are Able </li>
-								</ul>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
