--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<h1>Purpose and Education
 							</h1>
 							<p class="major"><!--[-->By Michelle Song</a> <!--]--></p>
-							<p> Looking at Education through different perspectives. Take a look at different lenses of education through a series of blog posts, a podcase and video. This wesbite was created for the Writing and Digital Media class.
+							<p> Looking at Education through different perspectives. Take a look at different lenses of education through a series of blog posts, a podcast and video. This wesbite was created for the Writing and Digital Media class.
 							 </p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -221,7 +221,7 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							<h2>Get in touch</h2>
+							<h2>Contact Me</h2>
 							<form method="post" action="#">
 								<div class="field half first">
 									<label for="name">Name</label>
@@ -246,11 +246,8 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<ul class="icons"
+								<li><a href="https://www.instagram.com/meeshsong/?hl=en" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
