--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 							<h1>Purpose and Education
 							</h1>
 							<p class="major"><!--[-->By Michelle Song</a> <!--]--></p>
-<<<<<<< HEAD
 							<p> Looking at Education through different perspectives. Take a look at different lenses of education through a series of blog posts, a podcast and video. This website was created for a Writing and Digital Media class.
-=======
-							<p> Looking at Education through different perspectives. Take a look at different lenses of education through a series of blog posts, a podcast and video. This wesbite was created for the Writing and Digital Media class.
->>>>>>> origin/master
 							 </p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
@@ -41,7 +37,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Medium Posts: Read about Purpose and Education</h2>
-							<p>A deeper look into Education. In these reflective and narrative posts, read about purpose, learning, understanding, and taking action. Click on each blog post title to read through these posts or click on Learn More to access my Medium website. </p>
+							<p>A deeper look into Education. In these reflective and narrative posts, read about purpose, learning, understanding, and taking action. Click on each blog post title to read through these posts or click Read to access the Medium website. </p>
 							<ul>
 								  <li><a href="https://medium.com/@mmsong97/education-and-purpose-do-you-have-it-42693683eaa7"</a> Education and Purpose - Do you have it? </li>
 									<li><a href="https://medium.com/@mmsong97/to-keep-learning-and-to-speak-with-silence-7afa42e2f338" </a> To Keep Learning and To Speak with Silence </li>
@@ -49,7 +45,7 @@
 									<li><a href="https://medium.com/@mmsong97/you-are-able-4ea0fcc5590" </a> You Are Able </li>
 									</ul>
 							<ul class="actions vertical">
-								<li><a href="https://medium.com/@mmsong97" target="_blank" class="button">Learn More</a></li>
+								<li><a href="https://medium.com/@mmsong97" target="_blank" class="button">Read</a></li>
 						</div>
 						<div class="image">
 							<img src="images/spotlight01.jpg" alt="" />
@@ -60,9 +56,9 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>Education Podcast</h2>
-							<p>Some friends and I created a podcast to give insight on our own personal thoughts on education. Click on the Learn More button to access the podcast through SoundCloud.</p>
-							<ul class="actions vertical"><!--Why not "Listen" for the button?-->
-								<li><a href="https://soundcloud.com/user-122066732-684770413/education-podcast" target="_blank" class="button">Learn More</a></li>
+							<p>Some friends and I created a podcast to give insight on our own personal thoughts on education. </p>
+							<ul class="actions vertical">
+								<li><a href="https://soundcloud.com/user-122066732-684770413/education-podcast" target="_blank" class="button">Listen</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -74,9 +70,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>What is Education to You: A Video </h2>
-							<p>We asked students around the Virginia Tech campus what education means to them. Click on the Learn More button to be directed to the video. </p>
+							<p>We asked students around the Virginia Tech campus what education means to them. </p>
 							<ul class="actions vertical">
-								<li><a href="https://www.youtube.com/watch?v=NtnxLKHC0Kk" target="_blank" class="button">Learn More</a></li>
+								<li><a href="https://www.youtube.com/watch?v=NtnxLKHC0Kk" target="_blank" class="button">Watch</a></li>
 							</ul>
 						</div>
 						<div class="image">
